<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nightbackground">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="79dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="500dp"
        android:gravity="center|center_horizontal"
        android:text="Log sleep completed"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logDataButton"
        android:onClick="logSleep"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="71dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/log_btn_text"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toTopOf="@+id/startTimerTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startDateEntry"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <EditText
        android:id="@+id/startDateEntry"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_marginStart="79dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="52dp"
        android:background="#3F51B5"
        android:backgroundTint="#030A32"
        android:ems="10"
        android:hint="Start date"
        android:inputType="time"
        android:outlineProvider="none"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="#FDFCFC"
        android:textColorHint="#FFFCFC"
        app:layout_constraintBottom_toTopOf="@+id/startTimerTextView"
        app:layout_constraintEnd_toStartOf="@+id/logDataButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTimeEntry" />

    <EditText
        android:id="@+id/startTimeEntry"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="2dp"
        android:background="#3F51B5"
        android:backgroundTint="#030A32"
        android:ems="10"
        android:hint="Start"
        android:inputType="time"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="#FDFCFC"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/startDateEntry"
        app:layout_constraintEnd_toStartOf="@+id/endTimeEntry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <EditText
        android:id="@+id/endTimeEntry"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="2dp"
        android:background="#3F51B5"
        android:backgroundTint="#030A32"
        android:ems="10"
        android:hint="End"
        android:inputType="date"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="#FDFCFC"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/startDateEntry"
        app:layout_constraintEnd_toStartOf="@+id/logDataButton"
        app:layout_constraintStart_toEndOf="@+id/startTimeEntry"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <ImageButton
        android:id="@+id/startTimerButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="135dp"
        android:backgroundTint="#FF9800"
        android:contentDescription="Start timer"
        android:onClick="startTimer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/endTimerButton"
        app:layout_constraintTop_toBottomOf="@+id/timerDisplayTextView"
        app:srcCompat="@drawable/start_timer_icon" />

    <ImageButton
        android:id="@+id/endTimerButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="135dp"
        android:backgroundTint="#FF9800"
        android:contentDescription="Stop timer"
        android:onClick="endTimer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/startTimerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerDisplayTextView"
        app:srcCompat="@drawable/stop_timer_icon" />

    <TextView
        android:id="@+id/timerDisplayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="111dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="10dp"
        android:text="00:00:00"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="75sp"
        app:layout_constraintBottom_toTopOf="@+id/startTimerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTimerTextView" />

    <TextView
        android:id="@+id/startTimerTextView"
        android:layout_width="253dp"
        android:layout_height="60dp"
        android:layout_marginStart="79dp"
        android:layout_marginEnd="79dp"
        android:text="Start timer before sleep"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/timerDisplayTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startDateEntry" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="330dp"
        android:layout_marginTop="254dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:clickable="true"
        android:onClick="BackButtonPressed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTimerTextView"
        app:srcCompat="@android:drawable/ic_menu_revert" />

</androidx.constraintlayout.widget.ConstraintLayout>